# keyforge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.gjc/_session-019f5611-74bb-7000-ac9a-9eea41806931/: .session-activity.json
.gjc/_session-019f5611-74bb-7000-ac9a-9eea41806931/state/: audit.jsonl  goal-mode-request.json  ralplan-state.json  skill-active-state.json  ultragoal-state.json
.gjc/_session-019f5611-74bb-7000-ac9a-9eea41806931/ultragoal/: brief.md  g002-quality-gate.json  goals.json  ledger.jsonl  output-capture-quality-gate.json
.gjc/_session-019f5611-74bb-7000-ac9a-9eea41806931/ultragoal/artifacts/: g002-test-report.json  output-capture-test-report.json
apps/ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/ui/src/: App.test.tsx  App.tsx  DevicesPage.test.tsx  KeyInspectorPage.test.tsx  data.ts  keyCatalog.test.ts  keyCatalog.ts  pages.tsx  styles.css  types.ts
apps/ui/src/components/: ProfileEditor.test.tsx  ProfileEditor.tsx  common.tsx
apps/ui/src/lib/: bridge.test.ts  bridge.ts
apps/ui/src/test/: setup.ts
crates/config/: Cargo.toml
crates/config/src/: action_result.rs  lib.rs  model.rs  repository.rs  validation.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs  pnp_metadata.rs  startup.rs  windows_impl.rs
docs/: ADR-0001-architecture.md  KNOWN_LIMITATIONS.md  REGRESSION_MANUAL_RESULTS.md  REGRESSION_TEST_PLAN.md  THREAT_MODEL.md
scripts/: regression.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: key_capture_guard.rs  lib.rs  main.rs
