[package]
name = "keyforge-platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1.7"
keyforge-config = { path = "../config" }
keyforge-engine = { path = "../engine" }
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input",
  "Win32_UI_WindowsAndMessaging",
] }
